WGS-416: Align style and order of metadata between author listing and related content in blogs Fix CSS

--- a/sites/all/themes/effoundationtheme/css/blog-presentation.css
+++ b/sites/all/themes/effoundationtheme/css/blog-presentation.css
@@ -155,12 +155,12 @@ section.large-12.columns.blog-presentation-content > div.topic-abstract{
 /* Blog and Presentation */
 
 .blog-presentation h2{
-    color: #6B6B6B;
+    color: #6B6B6B!important;;
     font-family: 'OpenSans-Regular-webfont', Arial, Helvetica, sans-serif!important;
-    border-bottom: 1px solid #BCBCBC;
-    padding-bottom: 5px;
-    font-size: 1.4em;
-    line-height: 1.2em;
+    border-bottom: 1px solid #BCBCBC!important;;
+    padding-bottom: 5px!important;;
+    font-size: 1.4em!important;;
+    line-height: 1.2em!important;;
     font-weight: normal!important;
 }
 
